--- a/public/Home-Page.html
+++ b/public/Home-Page.html
@@ -8,8 +8,9 @@
     
 </head>
 <body>
+<h1 id = "time"> </h1>
 
-<h1 class = "intro"> Test phase! Beta version coming soon! Emmanuel Chigemezu is adding more features.</h1>
+<h1 class = "intro"> Emmanuel Chigemezu is adding more features.</h1>
     
 <!-- <button onclick = "changeBackGroundColorToWhite()"> White theme </button>  <button onclick = "changeBackGroundColorToBlack()"> Black theme </button>
 --> 
@@ -47,7 +48,7 @@
 
         <br>
 
-        <input type = "submit" value = "Log in" class = "submit-button" class = "submit-button">
+        <input type = "submit" value = "Log in" class = "submit-button" class = "submit-button" class = "log-n-push">
 
     </form>
 
@@ -73,7 +74,7 @@
 
    
 
-<p class="intro"> Website code written by Emmanuel Chigemezu </p>
+<p class="intro"> Website's code written by Emmanuel Chigemezu </p>
 <script>
   const form = document.getElementById("log-in-form");
     form.reset();
