--- a/public/log-in.html
+++ b/public/log-in.html
@@ -8,8 +8,10 @@
 </head>
 <body>
 
-    <button onclick = "changeBackGroundColorToWhite()"> White theme </button>  <button onclick = "changeBackGroundColorToBlack()"> Black theme </button>
+    <h1 id = "time"> </h1>
 
+   <!-- <button onclick = "changeBackGroundColorToWhite()"> White theme </button>  <button onclick = "changeBackGroundColorToBlack()"> Black theme </button>
+-->
     <nav>
         <li>
 
@@ -50,7 +52,7 @@
 
         <br>
 
-        <input type = "submit" value = "Log in" class = "submit-button" class = "submit-button">
+        <input type = "submit" value = "Log in" class = "submit-button" class = "submit-button" class = "log-n-push">
 
     </form>
 
