--- a/public/create-account.html
+++ b/public/create-account.html
@@ -23,6 +23,8 @@
 
 </nav>
 
+<h1 id = "time1"> </h1>
+
     <div>
 
    <form method = "POST" action = "/create-account">
@@ -57,7 +59,7 @@
 <br>
 <input type = "password" name = "confirm_password" placeholder="Re-enter your password">
 <br> -->
-<input class = "submit-button" type = "submit" value = "Sign up">
+<input class = "log-in-push" type = "submit" value = "Sign up">
 <br>
 
    </form>
