--- a/public/Home-Page.html
+++ b/public/Home-Page.html
@@ -16,16 +16,16 @@
 --> 
 <div>
 
-<h1> Welcome to Blockchain Academy! </h1> 
+<h1> Welcome to HitBank.com! </h1> 
    
    <p class = "yoloConnect-mission">
-    ...Your gate to Web3!
+    ...Music is life.
    </p>
 
    </div>
 
    <div>
-
+<!--
     <form method = "POST" action = "/log-in" id="log-in-form">
 
         <h2>
@@ -48,15 +48,18 @@
 
         <br>
 
-        <input type = "submit" value = "Log in" class = "submit-button" class = "submit-button" class = "log-n-push">
+        <input type = "submit" value = "Log in" class = "submit-button" class = "log-n-push">
 
     </form>
 
     <p>
         New here? <a href = "/create-account.html"> Sign Up </a>
     </p>
+-->
+    <a href="/Don-Moen-Ft-Frank-Edwards-Hallelujah-(TrendyBeatz.com).mp3" download>Frank Edward- Halleluyah Download</a>
+  <br>
 
-   </div>
+</div>
 
    <div>
     <h3>
@@ -64,13 +67,13 @@
     </h3>
 
     Head Quarter: <address> 11, Costain, Lagos, Nigeria.</address> <br>
-    Email: blockchainacademy@gmail.com
+    Email: hitbank@gmail.com
     <br>
     Tel: +2347078399448
 
    </div>
 
-   Blockchain Academy 2025
+Hit Bank.com 2025
 
    
 
