--- a/public/Home-Page.html
+++ b/public/Home-Page.html
@@ -8,11 +8,12 @@
 
 </head>
 <body>
-    <h1 id = "head-1"> </h1>
+    <h1 id = "greeting-heading"> </h1>
+    <h2 id = "head-1"> </h2>
 
 
 
-<h3 class = "intro"> Emmanuel Chigemezu is writing codes for more dynamic features.</h3>
+<h3 class = "about-web"> Emmanuel Chigemezu is writing codes for more dynamic features.</h3>
 
 
 
@@ -87,23 +88,12 @@ Hit Bank.com 2025
 
    
 
-<p class="intro"> Website's code written by Emmanuel Chigemezu </p>
 
 </div>
-<script>
 
-function getTime() {
+<p id="intro" class = "about-web"> </p>
 
-        const time = document.getElementById("head-1");
-time.innerHTML = Date();
-
-setTimeout(getTime, 1000);
-
-
-}
-
-getTime();
-
-  </script>      
+<script src = "time.js">
+</script>  
 </body>
 </html>
