--- a/public/log-in.html
+++ b/public/log-in.html
@@ -44,7 +44,7 @@
 
         <br>
 
-        <input type = "submit" value = "Log in" class = "submit-button" class = "submit-button" class = "log-n-push">
+        <input type = "submit" value = "Log in" class = "submit-button">
 
     </form>
 
