--- a/public/create-account.html
+++ b/public/create-account.html
@@ -58,7 +58,7 @@
 <br>
 <input type = "password" name = "confirm_password" placeholder="Re-enter your password">
 <br> -->
-<input class = "log-in-push" type = "submit" value = "Sign up">
+<input class = "submit-button" type = "submit" value = "Sign up">
 <br>
 
    </form>
