--- a/public/Home-Page.html
+++ b/public/Home-Page.html
@@ -8,7 +8,11 @@
 
 </head>
 <body>
+
     <h1 id = "greeting-heading"> </h1>
+
+    <p class="fade-text"> Hello </p>
+    
     <h2 id = "head-1"> </h2>
 
 
@@ -92,6 +96,8 @@ Hit Bank.com 2025
 </div>
 
 <p id="intro" class = "about-web"> </p>
+
+
 
 <script src = "time.js">
 </script>  
