--- a/public/Home-Page.html
+++ b/public/Home-Page.html
@@ -21,7 +21,13 @@
 
 
 
-
+<nav>
+    <ul>
+        <li>
+            <a href="https://chat-9w45.onrender.com"> Connect and Chat </a>
+        </li>
+    </ul>
+</nav>
     
  
 
