--- a/public/create-account.html
+++ b/public/create-account.html
@@ -26,7 +26,7 @@
 
     <div>
 
-   <form method = "POST" action = "/create-account">
+   <form method = "POST" action = "/create-account" id = "form">
 
     <h1>
         Create Account:
@@ -62,6 +62,9 @@
 <br>
 
    </form>
+
+   <p id = "error"> </p>
+
 <br>
 Or 
 <a href = "/log-in"> Log In </a> instead.
